test/errors/type/collections/set/__ge2.yasl
echo collections.set().__ge(1, collections.set())
